--- a/less/mixIns.less
+++ b/less/mixIns.less
@@ -1,9 +1,8 @@
-.flexer(@dir){
+.flexer(){
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  // flex-wrap: wrap;
+  justify-content: left;
   align-items: center;
-  flex-direction: @dir;
 }
 
 .padd(@val){
