--- a/less/vars.less
+++ b/less/vars.less
@@ -1,5 +1,6 @@
-@mainColor: #179af8;
-@sideColor: #268582;
+@mainColor: #ffcccc;
+@sideColor: #ff8080;
+@hoverColor: #ff4d4d;
 
 @tablet: 600px;
 @desktop: 900px;
