--- a/less/todos.less
+++ b/less/todos.less
@@ -1,15 +1,74 @@
-ul{
-  list-style: none;
+.main {
+  padding-top: 60px;
+  text-align: center;
+  font-family: Helvetica;
+
+  ul {
+    list-style: none;
+    padding-left: 0;
+    justify-content: center;
+  }
+
+  li {
+    background-color: @sideColor;
+    color: white;
+    .grow(80px);
+    .flexer();
+    .padd(10px);
+    margin: 8px;
+
+  }
+
+  input{
+    border-radius: 100px;
+  }
+
+  select{
+    border-radius: 100px;
+  }
+
+  button{
+    border-radius: 100px;
+  }
+
+  .todoNames {
+    justify-content: space-between;
+    border-radius: 100px;
+
+    a {
+      text-decoration: none;
+      font-size: 24px;
+      width: 30%;
+      background-color: @hoverColor;
+      border-radius: 100px;
+      border-style: dashed;
+      padding: 10px;
+      color: white;
+    }
+
+    * {
+      width: 20%;
+    }
+  }
+
+  #categories {
+    
+    .categoriesList {
+      justify-content: space-evenly;
+      border-radius: 100px;
+      max-width: 500px;
+
+      * {
+        width: 20%;
+      }
+    }
+  }
 }
 
-li{
-  background-color: @sideColor;
-  color: white;
-  .grow(200px);
-  min-width: 100px;
-  max-width: 500px;
-  .flexer(row);
-  .padd(36px);
-  margin: 8px;
+#searchBar {
+  padding-top: 10px;
 
+  input {
+    width: 300px;
+  }
 }
